<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191d32">

    <TextView
        android:id="@+id/resultview"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/viewbg"
        android:textColor="@color/white"
        android:textSize="62sp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:gravity="end|bottom"
        android:paddingBottom="50dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:layout_marginTop="10dp">

        <Button
            android:id="@+id/buttonCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/ac"
            android:backgroundTint="#6d3b47"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="on_clear"
            app:rippleColor="@color/actionripple"/>


        <Button
                android:id="@+id/buttonexpo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/expo"
                android:backgroundTint="#dda15e"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="onOperator"
                app:rippleColor="@color/operatorripple"/>

            <Button
                android:id="@+id/buttonper"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/percentage"
                android:backgroundTint="#dda15e"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="onOperator"
                app:rippleColor="@color/operatorripple"/>

            <Button
                android:id="@+id/buttondiv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/div"
                android:backgroundTint="#dda15e"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="onOperator"
                app:rippleColor="@color/operatorripple"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingEnd="5dp"
        android:paddingStart="5dp">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="input"
            android:backgroundTint="@color/buttonnbg"
            app:rippleColor="@color/buttonripple"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_8"
            android:backgroundTint="@color/buttonnbg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="input"
            app:rippleColor="@color/buttonripple"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_9"
            android:backgroundTint="@color/buttonnbg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="input"
            app:rippleColor="@color/buttonripple"/>

        <Button
            android:id="@+id/buttonmul"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="*"
            android:backgroundTint="#dda15e"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="onOperator"
            app:rippleColor="@color/operatorripple"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingEnd="5dp"
        android:paddingStart="5dp">

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="4"
            android:onClick="input"
            android:backgroundTint="@color/buttonnbg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:rippleColor="@color/buttonripple"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="5"
            android:backgroundTint="@color/buttonnbg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="input"
            app:rippleColor="@color/buttonripple"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="6"
            android:backgroundTint="@color/buttonnbg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="input"
            app:rippleColor="@color/buttonripple"/>

        <Button
            android:id="@+id/buttonmin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="-"
            android:backgroundTint="#dda15e"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="onOperator"
            app:rippleColor="@color/operatorripple"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingEnd="5dp"
        android:paddingStart="5dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="1"
            android:onClick="input"
            android:backgroundTint="@color/buttonnbg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:rippleColor="@color/buttonripple"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_2"
            android:backgroundTint="@color/buttonnbg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="input"
            app:rippleColor="@color/buttonripple"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="3"
            android:backgroundTint="@color/buttonnbg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="input"
            app:rippleColor="@color/buttonripple"/>

        <Button
            android:id="@+id/buttonplus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="+"
            android:backgroundTint="#dda15e"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="onOperator"
            app:rippleColor="@color/operatorripple"/>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingEnd="5dp"
        android:paddingStart="5dp">

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:text="@string/_0"
            android:onClick="input"
            android:backgroundTint="@color/buttonnbg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:rippleColor="@color/buttonripple"/>

        <Button
            android:id="@+id/buttondot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/dot"
            android:backgroundTint="@color/buttonnbg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="decimal"
            app:rippleColor="@color/buttonripple"/>
        <Button
            android:id="@+id/buttonequals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="="
            android:backgroundTint="#6d3b47"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:rippleColor="@color/actionripple"
            android:onClick="onEqual"/>
    </LinearLayout>

</LinearLayout>